# xy_django_app_siteuser

./: MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/xy_web_server_demo/: requirements.txt
samples/xy_web_server_demo/source/Runner/Admin/: db.sqlite3
samples/xy_web_server_demo/source/Runner/Admin/Information/: admin.py
samples/xy_web_server_demo/source/Runner/Admin/Information/migrations/: 0001_initial.py
samples/xy_web_server_demo/source/Runner/Admin/SiteUser/: admin.py  apps.py  models.py  serializers.py
samples/xy_web_server_demo/source/Runner/Admin/SiteUser/migrations/: 0001_initial.py
samples/xy_web_server_demo/source/Runner/Admin/xy_web_server_demo/: settings.py
xy_django_app_siteuser/: abstracts.py  apps.py  models.py  serializers.py
